--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="../css/404.css">
-        <link rel="icon" href="../img/favicon.jpeg">
+      <link rel="icon" href="../img/weather.png">
         <script src="../js/404.js">
         <title>404</title>
 
