--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../css/styles.css">
     <title>About</title>
-     <link rel="icon" href="../img/favicon.jpeg">
+    <link rel="icon" href="../img/weather.png">
 </head>
 <body>
     <h1>About Me</h1>
