--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../css/styles.css">
     <title>Weather</title>
-     <link rel="icon" href="../img/favicon.jpeg">
+     <link rel="icon" href="../img/weather.png">
     
 </head>
 <body>
